<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/widget_background"
    android:padding="8dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/widget_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/title_plant_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/widget_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_plant"
            android:textColor="@color/colorOnSurfaceVariant"
            android:textSize="11sp"
            android:maxLines="2"
            android:ellipsize="end" />

    </LinearLayout>

</LinearLayout>
